--- a/style.css
+++ b/style.css
@@ -3,11 +3,10 @@
 }
 .circle{
 			border-radius:50%;
-<<<<<<< HEAD
-			width:300px;
-			height:300px;
-=======
 			width:500px;
-			height:500px;
->>>>>>> main
+			height:500px
+}
+.red {
+	background-color:red
+
 }
